erDiagram
    MAGIC_ITEM_CATEGORIES ||--o{ MAGIC_ITEMS : "category"
    MAGIC_ITEM_RARITIES ||--o{ MAGIC_ITEMS : "rarity"
    MAGIC_ITEMS ||--o| MAGIC_ITEM_CHARGES : "has"
    MAGIC_ITEMS ||--o{ MAGIC_ITEM_SPELLS : "casts"
    SPELLS ||--o{ MAGIC_ITEM_SPELLS : "spell"
    MAGIC_ITEMS ||--o{ MAGIC_ITEM_DAMAGE_RESISTANCES : "grants resistance"
    DAMAGE_TYPES ||--o{ MAGIC_ITEM_DAMAGE_RESISTANCES : "type"
    MAGIC_ITEMS ||--o{ MAGIC_ITEM_DAMAGE_VULNERABILITIES : "grants vulnerability"
    DAMAGE_TYPES ||--o{ MAGIC_ITEM_DAMAGE_VULNERABILITIES : "type"
    MAGIC_ITEM_CATEGORIES ||--o{ MAGIC_ITEM_CRAFTING_TOOLS : "requires tool"
    TOOLS ||--o{ MAGIC_ITEM_CRAFTING_TOOLS : "tool"
    MAGIC_ITEMS ||--o| SENTIENT_MAGIC_ITEMS : "sentient"
    ALIGNMENTS ||--o{ SENTIENT_MAGIC_ITEMS : "alignment"
    ARMOR ||--o{ MAGIC_ITEMS : "base armor"
    WEAPONS ||--o{ MAGIC_ITEMS : "base weapon"

    MAGIC_ITEM_CATEGORIES {
        int magic_item_category_id PK
        string name
    }

    MAGIC_ITEM_RARITIES {
        int magic_item_rarity_id PK
        string name
        decimal value_gp
        int crafting_days
        decimal crafting_cost_gp
    }

    MAGIC_ITEMS {
        int magic_item_id PK
        string name
        int magic_item_category_id FK
        int magic_item_rarity_id FK
        bool requires_attunement
        bool is_consumable
        bool is_cursed
        string category_specifier_text
        text description_text
        int base_armor_id FK
        int base_weapon_id FK
    }

    MAGIC_ITEM_CHARGES {
        int magic_item_id FK "PK"
        int max_charges
        string recharge_text
    }

    MAGIC_ITEM_SPELLS {
        int magic_item_id FK "PK"
        int spell_id FK "PK"
        string usage
    }

    MAGIC_ITEM_DAMAGE_RESISTANCES {
        int magic_item_id FK "PK"
        int damage_type_id FK "PK"
    }

    MAGIC_ITEM_DAMAGE_VULNERABILITIES {
        int magic_item_id FK "PK"
        int damage_type_id FK "PK"
    }

    MAGIC_ITEM_CRAFTING_TOOLS {
        int magic_item_category_id FK "PK"
        int tool_id FK "PK"
    }

    SENTIENT_MAGIC_ITEMS {
        int magic_item_id FK "PK"
        int int_score
        int wis_score
        int cha_score
        int alignment_id FK
        string communication_type
        string senses_text
        string special_purpose_text
    }

    DAMAGE_TYPES {
        int damage_type_id PK
        string name
    }

    SPELLS {
        int spell_id PK
    }

    TOOLS {
        int tool_id PK
    }

    ARMOR {
        int armor_id PK
    }

    WEAPONS {
        int weapon_id PK
    }

    ALIGNMENTS {
        int alignment_id PK
        string name
    }
